# ChangeLog for dev-util/eric
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*eric-4.4_pre20090821 (11 Sep 2009)

  11 Sep 2009; Davide Pesavento <davidepesa@gmail.com>
  -eric-4.4_pre20090726.ebuild, +eric-4.4_pre20090821.ebuild:
  New snapshot with some ebuild improvements: added italian and chinese
  translations, synced with portage ebuild, fixed bug #283148. Dropped some
  keywords because of new deps.

  10 Sep 2009; Davide Pesavento <davidepesa@gmail.com>
  -eric-4.4_pre20090627.ebuild:
  Remove old snapshot.

*eric-4.4_pre20090726 (03 Aug 2009)

  03 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  +eric-4.4_pre20090726.ebuild:
  New snapshot

*eric-4.3.5 (09 Jul 2009)

  09 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  +files/4.2.3-no-interactive.patch, +eric-4.3.5.ebuild,
  eric-4.4_pre20090627.ebuild:
  Version bump to 4.3.5. Drop ~sparc keywords because webkit doesnt work on
  sparc

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -eric-4.4_pre20090523.ebuild, eric-4.4_pre20090627.ebuild,
  +files/eric-snapshot-20090627-no-interactive.patch,
  -files/eric-snapshot-no-interactive.patch:
  Remove old snapshot, new eric-no-interactive patch

*eric-4.4_pre20090627 (28 Jun 2009)

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +eric-4.4_pre20090627.ebuild:
  Version bump

  12 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  eric-4.4_pre20090523.ebuild:
  Added spell USE flag, improved python eclass usage.

  12 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  eric-4.4_pre20090523.ebuild:
  Fix PyQt4 USE deps and quoting.

*eric-4.4_pre20090523 (07 Jun 2009)

  07 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +eric-4.4_pre20090523.ebuild, +files/eric-snapshot-no-interactive.patch:
  Import latest eric4 snapshot

  06 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -files/4.2.3-no-interactive.patch, -eric-4.3_pre20090201.ebuild,
  +metadata.xml:
  Drop old snapshot, import metadata.xml
