@@ -8,6 +8,6 @@ DIST eric4-i18n-it-4.4-snapshot-20090821.tar.gz 333239 RMD160 3292f286969dc9ae93
 DIST eric4-i18n-ru-4.4-snapshot-20090821.tar.gz 412098 RMD160 64daee91156d1164b6281fb6a46d428a8adae78f SHA1 6aa1b8bd7447d0839cfae17da5ac5209821ac1c5 SHA256 3f58d675cb4729a83653ee3ca02a9548d33a025aa46452182f0099f26266014d
 DIST eric4-i18n-tr-4.4-snapshot-20090821.tar.gz 377142 RMD160 7d7567df10ae4d3abd10fa7d0f3763e182b56578 SHA1 85d4b767fef0945dec654ac86aa3d2a4f756af1b SHA256 4ecc0f18297278374868289685e01400ac1111d2c77858c9178949aaf3e67a19
 DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090821.tar.gz 383735 RMD160 c5cee7d2dad40db3fa520d56908a61d7ee3a70c1 SHA1 8e6109c84ef6da1ec9bb9a31c27313effbafcf4b SHA256 829a269c01c54020f91c77bd12220305ae0986f62334edd5b818eea361a3b0a3
-EBUILD eric-4.4_pre20090821.ebuild 2016 RMD160 b0f9b1fd0d17d6563fe45e5cdce8634fe3cf6da8 SHA1 c66222697a92c8fe8d7e5c2edf66dafb71dc1106 SHA256 3283d60f0dfbbcd344e63541cfe416c83d3fa4de3a293f536ff7f7052d6accb9
-MISC ChangeLog 2389 RMD160 f9cc6a39e16f2c94daef5d2950a05e2b196edcdd SHA1 9ec8f2e0b6216be14380e947bef15c210aa62a5f SHA256 eadda57fdf134a25ff021445c2324fa946286c307025931955bd2cd877a7832d
+EBUILD eric-4.4_pre20090821.ebuild 1985 RMD160 b4686ea0ad1ef20c6cccdeda61351d5837e7befc SHA1 1d764c0735daa5af11dfe950093146a6841ae36d SHA256 719a8496e368bf95df38f63f7f0872dde619b1f341cf6f575ab2164a26a13fca
+MISC ChangeLog 2631 RMD160 a37c6fe5fdf5cb6f4157e1a006c31b17ec193d5f SHA1 330bd594ffdb014a1da041c0a97a5c5eaee665bd SHA256 b0b5a0023b5943c78031741b42b0afef3665d8c3ad516d760a7f1d9cd29877fa
 MISC metadata.xml 179 RMD160 887c899594fdaa3d82028c3d84188354d3784cd9 SHA1 551c6b2378ff31eadc1e4860211ec8709ce960bd SHA256 1fbdee58e0ba0f8730f6a27979cb7eeed8ebd3afa316d61b34a5f4893291a646
