@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Sep 2009; Davide Pesavento <davidepesa@gmail.com>
+  eric-4.4_pre20090821.ebuild:
+  Raise python dep to >= 2.6, so we can use the json module instead of the
+  deprecated dev-python/simplejson. Thanks to Arfrever
+  <arfrever@gentoo.org>.
+
 *eric-4.4_pre20090821 (11 Sep 2009)
 
   11 Sep 2009; Davide Pesavento <davidepesa@gmail.com>
